Fixing background alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,11 +4,11 @@
 @import "~prismjs/plugins/toolbar/prism-toolbar.css";
 @import "~prismjs/themes/prism-okaidia";
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-html, body, app-root, .app-frame {
-    overflow: hidden;
-    margin: 0;
+html, body { height: 100%; }
+
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+
+app-root {
+    background: #212121;
     height: 100%;
-    box-sizing: border-box;
-    color: #212121;
 }
